# Forest

./: .gitignore  README.md  mypy.ini  pyproject.toml
src/: data.py  pipeline.py  train.py
src/forest_ml/: data.py  eda.py  feature_engin.py  params_searcher.py  pipeline.py  train.py
src/forest_ml/model/: predictor.py
tests/: datasamples.csv  test_data.py  test_predict.py  test_train.py
