[tool.poetry]
name = "forest"
version = "0.1.0"
description = "Model for predicting Cover Type in a forest"
authors = ["WioWio <violetta.nosenko@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
click = "^8.0.3"
pandas = "^1.3.4"
sklearn = "^0.0"
scipy = "1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
