[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "Model for predicting Cover Type in a forest"
authors = ["WioWio <violetta.nosenko@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
click = "^8.0.3"
pandas = "^1.3.4"
sklearn = "^0.0"
scipy = "1.8.0"
joblib = "^1.1.0"
pipeline = "^0.1"
pywin32 = "228"
mlflow = "1.22.0"
Boruta = "^0.3"
pandas-profiling = "^3.2.0"

[tool.poetry.scripts]
train = "src.forest_ml.train:train"
eda = "src.forest_ml.eda:generate_eda"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
